--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
 <title>Rutuja ❤️</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 body {
     margin: 0;
     height: 100vh;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #ff758c, #ff7eb3);
-    overflow: hidden;
+    background: linear-gradient(45deg,#ff4e8a,#ff6ec7);
     transition: 1s;
 }
 
@@ -21,6 +22,7 @@ h1 {
     color: white;
     text-align: center;
     font-size: 28px;
+    z-index: 2;
 }
 
 button {
@@ -31,41 +33,78 @@ button {
     border-radius: 30px;
     cursor: pointer;
     transition: 0.3s;
+    z-index: 2;
 }
 
 #yesBtn {
-    background-color: white;
-    color: #ff4b6e;
+    background: white;
+    color: #ff4e8a;
 }
 
 #noBtn {
-    background-color: #ff4b6e;
+    background: #ff4e8a;
     color: white;
     position: absolute;
+}
+
+.heart {
+    position: absolute;
+    color: white;
+    animation: float 6s linear infinite;
+}
+
+@keyframes float {
+    0% { transform: translateY(100vh); opacity: 1; }
+    100% { transform: translateY(-10vh); opacity: 0; }
 }
 </style>
 </head>
 
-<body>
+<body onclick="playMusic()">
 
 <h1>Rutuja, Will You Be Mine Forever? ❤️</h1>
 
 <button id="yesBtn" onclick="goToLetter()">YES ❤️</button>
 <button id="noBtn" onmouseover="moveNo()">NO 😜</button>
 
+<audio id="bgMusic" loop>
+<source src="https://www2.cs.uic.edu/~i101/SoundFiles/StarWars60.wav" type="audio/mpeg">
+</audio>
+
 <script>
-function moveNo() {
-    var btn = document.getElementById("noBtn");
-    btn.style.top = Math.random() * 80 + "%";
-    btn.style.left = Math.random() * 80 + "%";
+let yesSize = 18;
+
+function playMusic(){
+    document.getElementById("bgMusic").play();
 }
 
-function goToLetter() {
+function moveNo() {
+    let btn = document.getElementById("noBtn");
+    btn.style.top = Math.random()*80 + "%";
+    btn.style.left = Math.random()*80 + "%";
+
+    yesSize += 5;
+    document.getElementById("yesBtn").style.fontSize = yesSize + "px";
+}
+
+function goToLetter(){
     document.body.style.opacity = "0";
     setTimeout(function(){
-        window.location.href = "loveletter.html";
-    }, 1000);
+        window.location.href="loveletter.html";
+    },1000);
 }
+
+// Floating hearts
+setInterval(function(){
+    let heart = document.createElement("div");
+    heart.innerHTML = "❤️";
+    heart.className = "heart";
+    heart.style.left = Math.random()*100 + "vw";
+    heart.style.fontSize = Math.random()*20 + 15 + "px";
+    document.body.appendChild(heart);
+
+    setTimeout(()=>{heart.remove();},6000);
+},500);
 </script>
 
 </body>
